--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
         <div class="row">
           <div class="col-sm">
             <h1 id="city">Vancouver</h1>
-            <h2 id="Temperature"></h2>
-            <span class="weather-icon"><i class="fas fa-cloud"></i></span>
-            15°C
+            <h2 id="Temperature">
+              <span class="weather-icon"> <i class="fas fa-cloud"></i> </span>
+              15°C
+            </h2>
           </div>
           <div class="col-sm">
             <form id="search-location">
@@ -48,7 +49,7 @@
                 class="submit-button"
               />
             </form>
-            <p class="date-time"><strong> date and time</strong></p>
+            <p class="date-time"><strong> May 25th, 2020</strong></p>
             <ul id="weather-details">
               <li>Wind <span id="wind-speed"></span>km/hr</li>
               <li>Humidity <span id="humidity"></span>%</li>
@@ -63,10 +64,18 @@
     <section class="section-2">
       <div class="row">
         <div class="col-sm">
-          <p id="sunrise-time" class="sun-time">Sunrise * Time</p>
+          <p id="sunrise-time" class="sun-time">
+            Sunrise
+            <i class="fas fa-sun"></i>
+            Time
+          </p>
         </div>
         <div class="col-sm">
-          <p id="sunset-time" class="sun-time">Sunset * Time</p>
+          <p id="sunset-time" class="sun-time">
+            Sunset
+            <i class="fas fa-moon"></i>
+            Time
+          </p>
         </div>
       </div>
     </section>
