Fixed inline elements

--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
         <div class="row">
           <div class="col-sm">
             <h1 id="city">Vancouver</h1>
-            <h2 id="Temperature">
-              <span class="weather-icon"> <i class="fas fa-cloud"></i> </span>
-              15°C
-            </h2>
+            <p class="weather-icon"><i class="fas fa-cloud"></i></p>
+            <h2 id="Temperature">15°C</h2>
           </div>
           <div class="col-sm">
             <form id="search-location">
