--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="src/style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap"
       rel="stylesheet"
@@ -21,15 +20,18 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <section class="section-1">
       <div class="container">
         <div class="row">
           <div class="col-sm">
-            <h1 id="city">Vancouver</h1>
+            <h1 id="city"></h1>
             <p class="weather-icon"><i class="fas fa-cloud"></i></p>
-            <h2 id="Temperature">15°C</h2>
+            <h2 id="temperature"></h2>
+            <span class="degrees" id="degreeSign">°C</span>
+            <p id="weather-description"></p>
           </div>
           <div class="col-sm">
             <form id="search-location">
@@ -49,12 +51,12 @@
               />
             </form>
             <p id="date-time" class="date-time">
-              <strong> May 25th, 2020</strong>
+              <strong> </strong>
             </p>
             <ul id="weather-details">
-              <li>Wind <span id="wind-speed"></span>km/hr</li>
+              <li>Wind <span id="wind-speed"></span> km/hr</li>
               <li>Humidity <span id="humidity"></span>%</li>
-              <li>Precipitation 0 cm</li>
+              <li>Feels like <span id="real-feel"></span>°C</li>
             </ul>
           </div>
         </div>
