Attempt at current location button

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             </ul>
           </div>
         </div>
-        <button class="fahrenheit">°F</button>
-        <button class="celsius">°C</button>
-        <button class="current-location">Current 📍</button>
+        <button id="fahrenheit">°F</button>
+        <button id="celsius">°C</button>
+        <button id="current-location">Current 📍</button>
       </div>
     </section>
     <section class="section-2">
