Added fahrenheit conversion button

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <div class="row">
           <div class="col-sm">
             <h1 id="city"></h1>
-            <p class="weather-icon"><i class="fas fa-cloud"></i></p>
+            <p class="weather-icon"></p>
             <h2 id="temperature"></h2>
-            <span class="degrees" id="degreeSign">°C</span>
+            <span class="degrees" id="degree-sign">°C</span>
             <p id="weather-description"></p>
           </div>
           <div class="col-sm">
